
2007-03-13  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/codecs.c: fix for bug # 1679545

2007-02-28  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* ppm2mpeg.sh: fix for mutable filenames with '.' right
		after the '%' of the format specifier.
	* ffmpeg, ffmpeg-svn6791, ffmpeg-svn8133, configure.in,
		src/xtoffmpeg.c: libav* version bump
	* src/xtoffmpeg.c: fix bug # 1584093 on the xvidcap side
		(adding a trellis quantiser to ffmpeg is beyond my
		skill and time at hand)
	* src/capture.c: fixed XDamage stuff that was completely 
		broken for anything but 32bit RGBA
	* src/app_data.c: fixed animate command for mutable filenames
		that have a '.' right after the '%' of the format
		specifier.

2007-02-23  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* configure.in: change gtk+ dependency from 2.4 to 2.5 because
		of references to stock items not present before

2007-02-10  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/xtoffmpeg.c: fix for bug # 1656983

2007-02-08  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: codecs.c, codecs.h, gnome_ui.c, capture.c, capture.h, 
		app_data.c, job.c, app_data.h, job.h, gnome_options.c, 
		main.c: code cleanup, documentation and #ifdefs
	* po/de.po, po/en.po: German translation updated
	* configure.in, src/gnome-xvidcap.glade, debian: changelog, rules
		version bump to 1.1.5rc1 (not for docs)

2007-02-06  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src/job.h: fix bug 1651517

2007-01-30  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: gnome_warning.c, xtoffmpeg.c, gnome_frame.c, main.c,
		xtoxwd.c: more code cleanup
	* configure.in, src: gnome_ui.c, capture.c, app_data.c, job.c,
		job.h, app_data.h, gnome_options.c, options.c, 
		gnome-xvidcap.glade: added XDamage capture 

2007-01-11  Karl H. Beckers  <karl.h.beckers@gmx.net>
	* src: led_meter.c, xtoxwd.h, led_meter.h, xvidcap-intl.h, 
		gnome_warning.c, gnome_warning.h, xtoffmpeg.c, 
		gnome_ui.c, capture.c, app_data.c, job.c, gnome_frame.c, 